syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "Lending";

package com.lending.proto;

message Prospect {
  int64 prospectId = 1;
  oneof prospectType {
    Business business = 2;
    Person person = 3;
  }
}

message Business {
  int64 businessId = 1;
  string name = 2;
  string naics = 3;
  string fein = 4;

}

message Person {
  int64 personId = 1;
  string firstName = 2;
  string lastName = 3;
  string governmentId = 4;
}
